--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     ],
     "require": {
         "php": "^8.2",
-        "filament/filament": "^3.2.139 || ^4.0"
+        "filament/filament": "^3.2.139 || ^4.0",
         "spatie/laravel-package-tools": "^1.15.0",
         "stevebauman/hypertext": "^1.1",
         "ueberdosis/tiptap-php": "^1.4"
